--- a/index.html
+++ b/index.html
@@ -650,13 +650,34 @@
             margin: 14px 0;
         }
 
+
+        /* Mobile cleanup: remove internal dividers and borders */
+        @media (max-width: 768px) {
+            hr,
+            .dosha-divider,
+            .section-divider,
+            .option-divider,
+            .divider {
+                display: none !important;
+            }
+
+            .question-card {
+                border: none !important;
+                box-shadow: none !important;
+            }
+
+            .option-row {
+                border-bottom: none !important;
+            }
+        }
+
 </style>
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Dosha Quiz</h1>
-            <p>Discover Your Ayurvedic Body Type</p>
+            <p>Analyse Your Ayurvedic Body Type</p>
         </header>
 
         <div class="instructions">
@@ -665,7 +686,7 @@
                 <li>Tick all applicable options in each row. For example, if your skin is dry, thick, and warm, select both "Dry" and "Warm."</li>
                 <li>Choose the option that best describes you for most of the year.</li>
                 <li>After completing all questions, click "Calculate Results" to see your scores.</li>
-                <li>Download your personalized PDF report to share with others.</li>
+                <li>Download your personalized PDF report to share back to me.</li>
             </ol>
         </div>
 
@@ -1566,3 +1587,4 @@
 
 </body>
 </html>
+
