--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
         <div class="instructions">
             <h2>Instructions</h2>
             <ol>
-                <li>Tick all applicable options in each row. For example, if your skin is dry, thick, and warm, select both "Dry" and "Warm."</li>
+                <li>Tick all applicable options in each row. For example, if your skin is dry, thick, and warm, select all "Dry" and "Warm."</li>
                 <li>Choose the option that best describes you for most of the year.</li>
                 <li>After completing all questions, click "Calculate Results" to see your scores.</li>
                 <li>Download your personalized PDF report to share back to me.</li>
@@ -1030,7 +1030,7 @@
         </div>
 
         <footer>
-            <p>This quiz is for educational purposes only. Consult an Ayurvedic practitioner for personalized guidance.</p>
+            <p>This quiz is for general awareness. For any changes to diet, lifestyle, or medication, seek proper guidance.</p>
         </footer>
     </div>
 
