--- a/index.html
+++ b/index.html
@@ -1529,7 +1529,7 @@
                 doc.setFontSize(8);
                 doc.setTextColor(150, 150, 150);
                 doc.text(
-                    'This report is for educational purposes only. Consult an Ayurvedic practitioner for personalized guidance.',
+                    'This quiz is for general awareness. For any changes to diet, lifestyle, or medication, seek proper guidance.',
                     pageWidth / 2,
                     pageHeight - 10,
                     { align: 'center' }
